<resources>
    <string name="app_name">Maths Manthra</string>
    <string name="app_title">Maths Manthra</string>
    <string name="accessibility_service_description">
        Maths Mantra Accessibility Service helps provide better learning experience by observing screen content and providing spoken feedback.
    </string>
    <string name="subtitle">Sharpen your math skills, one problem at a time.</string>
    <string name="quick_play">Quick Play</string>
    <string name="learning_mode">Learning mode</string>
    <string name="game_mode">Game mode</string>
    <string name="userguide">Userguide</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="footer">\u00A9 2025 Maths Manthra All rights reserved</string>
    <string name="logo_description">App logo</string>
    <string name="quick_play_desc">Start a quick math challenge</string>
    <string name="learning_mode_desc">Enter learning mode</string>
    <string name="game_mode_desc">Enter game mode</string>
    <string name="userguide_desc">Open user guide</string>
    <string name="settings_desc">Open settings</string>
    <string name="quit_desc">Exit the application</string>
    <string name="settings_title">Settings</string>
    <string name="music_volume_label">Music Volume</string>
    <string name="music_volume_decrease_desc">Decrease music volume</string>
    <string name="music_volume_increase_desc">Increase music volume</string>
    <string name="music_volume_value_desc">Current music volume level</string>
    <string name="speech_volume_label">Speech Volume</string>
    <string name="speech_volume_decrease_desc">Decrease speech volume</string>
    <string name="speech_volume_increase_desc">Increase speech volume</string>
    <string name="speech_volume_value_desc">Current speech volume level</string>
    <string name="speech_rate_label">Speech Rate</string>
    <string name="speech_rate_decrease_desc">Decrease speech volume</string>
    <string name="speech_rate_increase_desc">Increase speech volume</string>
    <string name="speech_rate_value_desc">Current speech volume level</string>
    <string name="background_music_toggle_label">Background Music</string>
    <string name="background_music_toggle_desc">Toggle background music on or off</string>
    <string name="choose_contrast">Choose Contrast</string>
    <string name="choose_contrast_desc">Select the screen contrast option</string>
    <string name="contrast_default">Default Contrast</string>
    <string name="contrast_default_desc">Use the default color contrast</string>
    <string name="contrast_white_on_black">White on Black</string>
    <string name="contrast_white_on_black_desc">Use white text on black background</string>
    <string name="contrast_black_on_white">Black on White</string>
    <string name="contrast_black_on_white_desc">Use black text on white background</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="difficulty_options_desc">Select game difficulty level</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_easy_desc">Easy difficulty level</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_medium_desc">Medium difficulty level</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_hard_desc">Hard difficulty level</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_language_desc">Select your preferred language</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="reset_settings_desc">Reset all settings to default values</string>
    <string name="language_default">Default</string>
    <string name="language_english">English</string>
    <string name="language_malayalam">Malayalam</string>
    <string name="sample_story_question">Arjun has %1$d apples and Mithra has %2$d apples. How many apples do they have?</string>
    <string name="hint_enter_answer">Enter your answer</string>
    <string name="content_submit_button">Submit your answer</string>
    <string name="content_answer_field">Answer input field</string>
    <string name="shake_button">shake </string>
    <string name="tap_button">tap</string>
    <string name="mcq">MCQ</string>
    <string name="number_line">Number Line</string>
    <string name="mental_calculation">Mental Calculation</string>
    <string name="angle">Angle</string>
    <string name="stereo_sound">Stereo Sound</string>
    <string name="drawing">Drawing</string>
    <string name="direction">Direction</string>
    <string name="touch_the_screen">Touch the Screen</string>
    <string name="turn_to_angle">Turn to %1$d°</string>
    <string name="degree_placeholder">0°</string>
    <string name="compassdescription">compass turn the phone in the direction as asked in teh question </string>
    <string name="drawing_description">Drawing screen with shape input and control buttons</string>
    <string name="draw_shape">Draw a shape</string>
    <string name="draw_instruction">Instruction: Draw the required shape</string>
    <string name="drawing_canvas_description">Canvas for drawing. Use touch gestures to draw your shape.</string>
    <string name="reset">Reset</string>
    <string name="reset_description">Clear the drawing and start again</string>
    <string name="submit">Submit</string>
    <string name="next">next</string>
    <string name="submit_description">Submit your drawing for evaluation</string>
    <string name="rotate_your_phone">Rotate Your Phone</string>
    <string name="turn_phone_90_degrees">Turn your phone 90 degrees</string>
    <string name="rotation_angle_default">Rotation Angle: 0°</string>
    <string name="angle_description">Screen showing phone rotation instructions</string>
    <string name="mental_description">Mental calculation screen with math question and input</string>
    <string name="calculate_prompt">Calculate the value of:</string>
    <string name="sample_math_question">2 + 2 * 2 - 5 = ?</string>
    <string name="math_question_description">Math question. What is 2 plus 2 times 2 minus 5? Double tap to repeat the question.</string>
    <string name="answer_input_description">Enter your answer here</string>
    <string name="answer_hint">Your Answer Here</string>
    <string name="use_to_move"><![CDATA[<< Use -/+ to move >>]]></string>
    <string name="shake_count_initial">0</string>
    <string name="shake_count_description">Current shake count, starts at 0</string>
    <string name="shake_instruction">Shake the device to start</string>
    <string name="shake_instruction_description">Instruction to shake the device to start the game</string>
    <string name="audio_instruction">Listen carefully  substract first number from second number.</string>
    <string name="audio_instruction_description">Instruction. Listen carefully. Tap Read the Question to hear the numbers before solving.</string>
    <string name="read_question">Read the Question</string>
    <string name="read_question_description">Button to read the math question aloud. Double tap to listen.</string>
    <string name="enter_answer_hint">Enter your answer</string>
    <string name="your_answer_here">Your Answer Here</string>
    <string name="number_line_description">Number Line Activity. Use the buttons to move left or right on the number line to solve the math question.</string>
    <string name="number_line_question">What is 0 + 12?</string>
    <string name="number_line_question_description">Question. What is 0 plus 12? Double tap to repeat the question.</string>
    <string name="number_line_visual_description">Visual number line. Use the buttons below to move left or right.</string>
    <string name="current_position_description">Current position on the number line. Use the buttons to move left or right.</string>
    <string name="move_left">-</string>
    <string name="move_left_description">Move left button. Moves one step left on the number line.</string>
    <string name="move_right">+</string>
    <string name="move_right_description">Move right button. Moves one step right on the number line.</string>
    <string name="tap_screen_description">This is the Tap Count Screen. Tap anywhere to increase the count.</string>
    <string name="tap_count_description">Tap count: 0</string>
    <string name="initial_tap_count">0</string>
    <string name="tap_instruction">Tap  %1$d° times  </string>
    <string name="tap_instruction_description">Instruction: Tap anywhere to increase the   %1$d° count.</string>
    <string name="touch_screen_description">Touch your finger game answer with your fingers</string>
    <string name="touch_instruction">Put 2 fingers on the screen</string>
    <string name="touch_image_description">Illustration of two fingers touching the screen</string>
    <string name="right_answer">Right Answer!</string>
    <string name="wrong_answer">Wrong Answer!</string>
    <string name="turn_to_angle_template">Turn to %1$d° from your current direction</string>
    <string name="relative_angle_template">Relative Angle: %1$d°</string>
    <string name="current_angle_announcement"> %1$s</string>
    <string name="compass_turn_to">Turn to %1$s </string>
    <string name="compass_correct">Correct!</string>
    <string name="compass_correct_msg">You turned to the correct direction!</string>
    <string name="current_direction_accessibility">Current direction: %1$s </string>
        <string name="correct_answer">Right Answer</string>
        <string name="touchscreen_question_format">%1$d + %2$d = ? (Use fingers to answer)</string>
        <string name="touchscreen_fingers_on_screen">Fingers on screen: %1$d</string>
    <string name="canvas_cleared">Canvas cleared. You can draw again.</string>
    <string name="drawing_task">Drawing task. Draw a %1$s. Use touch gestures to draw.</string>
    <string name="task_completed">Task completed</string>
    <string name="shake_count_announcement">Shake count: %1$d</string>
    <string name="shake_target_instruction">Shake the device %1$d times</string>
    <string name="shake_success">Well done!</string>
    <string name="shake_failure">Try again!</string>
    <string name="shake_continue">Continue</string>
    <string name="shake_next_question">Next question</string>
    <string name="shake_game_over">Shake game over.</string>
        <string name="current_position_label">You re standing on number:\n</string>
        <string name="plus">plus</string>
        <string name="minus">minus</string>
        <string name="right">right</string>
        <string name="left">left</string>
     <string name="standing_on">You re standing on %1$s. </string>
    <string name="what_is">What is %1$s %2$s %3$s? </string>
    <string name="units_to_direction">Move %1$s units to the %2$s of Number line.</string>
    <string name="appreciation_message">Good going</string>
        <string name="continue_button">Continue</string>
    <string name="hint_fallback">something went wrong</string>
    <string-array name="compass_directions">
        <item>North</item>
        <item>North-Northeast</item>
        <item>Northeast</item>
        <item>East-Northeast</item>
        <item>East</item>
        <item>East-Southeast</item>
        <item>Southeast</item>
        <item>South-Southeast</item>
        <item>South</item>
        <item>South-Southwest</item>
        <item>Southwest</item>
        <item>West-Southwest</item>
        <item>West</item>
        <item>West-Northwest</item>
        <item>Northwest</item>
        <item>North-Northwest</item>
    </string-array>
        <string name="monday">Monday</string>
        <string name="tuesday">Tuesday</string>
        <string name="wednesday">Wednesday</string>
        <string name="thursday">Thursday</string>
        <string name="friday">Friday</string>
        <string name="saturday">Saturday</string>
        <string name="sunday">Sunday</string>
</resources>