<!-- Second Layout -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/instruction_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio_instruction"
            android:textSize="24sp"
            android:layout_margin="10dp"
            android:textColor="?attr/colorOnSecondary"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/audio_instruction_description"
            android:accessibilityLiveRegion="polite" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/read_question_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/read_question"
            android:textColor="?attr/colorOnPrimary"
            android:backgroundTint="?attr/colorPrimary"
            android:importantForAccessibility="yes"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:contentDescription="@string/read_question_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            android:textColor="?attr/colorPrimary"
            app:boxBackgroundColor="?attr/colorSurface"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/answer_input_description"
            android:hint="@string/enter_answer_hint"
            android:labelFor="@id/answer_et">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answer_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_answer_here"
                android:textColor="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorPrimary"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:accessibilityLiveRegion="polite"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_answer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="24sp"
            android:text="@string/submit"
            android:textColor="?attr/colorOnPrimary"
            android:backgroundTint="?attr/colorPrimary"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/submit_description" />
    </LinearLayout>
</FrameLayout>