<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".view.game.NumberLineFragment"
    android:contentDescription="@string/number_line_page_desc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!-- Math Question - Focusable and Repeatable -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/number_line_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_line_question"
            android:textAlignment="center"
            android:textSize="36sp"
            android:focusable="true"
            android:clickable="true"
            android:contentDescription="@string/number_line_question_description"
            android:importantForAccessibility="yes"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginBottom="10dp" />

        <!-- Number Line View -->
        <com.zendalona.zmantra.customView.NumberLineView
            android:id="@+id/number_line_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:focusable="false"
            android:clickable="false"
            android:importantForAccessibility="no"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/number_line_visual_description" />

        <!-- Current Position Feedback -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_position_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/use_to_move"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/current_position_description" />

        <!-- Navigation Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="false">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_left"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:textSize="36sp"
                android:layout_weight="0.5"
                android:clickable="true"
                android:focusable="true"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/move_left_description"
                android:text="@string/move_left"
                android:textColor="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorPrimary"
                android:nextFocusLeft="@id/btn_right"
                android:nextFocusRight="@id/btn_right" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_right"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:textSize="36sp"
                android:layout_weight="0.5"
                android:clickable="true"
                android:focusable="true"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/move_right_description"
                android:text="@string/move_right"
                android:textColor="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorPrimary"
                android:nextFocusLeft="@id/btn_left"
                android:nextFocusRight="@id/btn_left" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
